gfx/vr/gfxVROpenVR.cpp
@@ -253,7 +253,7 @@ VRDisplayOpenVR::GetSensorState()
   const uint32_t posesSize = ::vr::k_unTrackedDeviceIndex_Hmd + 1;
   ::vr::TrackedDevicePose_t poses[posesSize];
   // Note: We *must* call WaitGetPoses in order for any rendering to happen at all.
-  mVRCompositor->WaitGetPoses(nullptr, 0, poses, posesSize);
+  mVRCompositor->WaitGetPoses(poses, posesSize, nullptr, 0);
   gfx::Matrix4x4 headToEyeTransforms[2];
   UpdateEyeParameters(headToEyeTransforms);
 
